KMA Human Resources Consulting - Assistant Project Manager. Job Application for Technical Project Manager at Starry. Job Application for Project Manager of Wireless Products at Starry. Automation Anywhere Careers - Sr. Program Manager. Automation Anywhere Careers - Sr. Technical Program Manager. LinkedIn Careers - Program Manager, Media Operations (LMS). Softcat Careers - Project Manager. NICE Careers - Program manager. Job Application for Automotive Project Manager at Velodyne. Job Application for Program Manager, R&D at Velodyne. Doctolib - Project Manager Call Centers. Nutanix Careers - Presales / Technical Enablement Program Manager - Southern Europe (Paris-Based).     UX Project Manager at Modus . Avant - Technical Project Manager, Cloud Infrastructure. Volta Charging - Junior Project Manager. Job Application for Junior Project Manager, Spatial& at Store No. 8. Project Manager. Assistant Project Manager. Project Manager - Interior Construction. Farfetch Careers - Global Sales Program Manager, Private Client. NPI Program Manager - Bossanova Robotics - Career Page. Technical Project Manager - Bossanova Robotics - Career Page.     Inspection Program Manager - 0748-2 at State of Maine . Sr Project Manager - Itron Careers. Auric Energy - Project Manager. SPARK Schools - Jobs: Programme Manager - Apply online. Riverside Technology, inc. - Jobs: Program Manager (Science/IT) - Apply online. TrendKite/Cision - Senior Technical Program Manager. King Kong - Jobs: Digital Project Ringleader (Lead Generation and eCommerce Web Project Manager) - Apply online. Markforged - Technical Software Program Manager.       Senior IT Project Manager/Scrum Master - Great Minds     . Project Manager #0042 job at AltSource in Portland, OR, powered by JobScore. Instructure - Project Manager, Custom Development. Job Application for Project Manager - Customer Success at Arctic Wolf Networks. Bey IT Project Manager (Digital eCommerce) | SmartRecruiters. Astreya Demand Gen Marketing Program Ma

--- a/project-manager.html
+++ b/project-manager.html
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://modus.recruiterbox.com/jobs/fk03ft7'>
+<h5><a href='http://modus.recruiterbox.com/jobs/fk03ft7'>
     UX Project Manager at Modus
 </a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://riversidetechnology.workable.com/j/327EEB5B13'>Riverside Technology, inc. - Jobs: Program Manager (Science/IT) - Apply online</a></h5> 
+<h5><a href='https://riversidetechnology.workable.com/j/327EEB5B13'>Riverside Technology, inc. - Jobs: Program Manager (Science/IT) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -186,7 +186,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Astreya/743999692408884-demand-gen-marketing-program-manager'>Astreya Demand Gen Marketing Program Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Astreya/743999692408884-demand-gen-marketing-program-manager'>Astreya Demand Gen Marketing Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -194,7 +194,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -230,7 +230,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/morphe/jobs/project-manager-visual-merchandising-azIQsaN1Wr6AVZaICoXfFy'>Project Manager, Visual Merchandising #0941 job at Morphe in San Francisco, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/morphe/jobs/project-manager-visual-merchandising-azIQsaN1Wr6AVZaICoXfFy'>Project Manager, Visual Merchandising #0941 job at Morphe in San Francisco, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -238,7 +238,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/B0R8UQlcl7/Project-Manager-III'>Project Manager III - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/B0R8UQlcl7/Project-Manager-III'>Project Manager III - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -354,7 +354,7 @@
 <p><span class="badge badge-light">Kansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/28A3EF4E0D'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/28A3EF4E0D'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -362,7 +362,7 @@
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/37A0F0A98D'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/37A0F0A98D'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -430,7 +430,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/89C68AADDB'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/89C68AADDB'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
