--- a/full-stack.html
+++ b/full-stack.html
@@ -147,7 +147,7 @@ Berlin (published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42751&localeCode=en-us'>Full Stack Web Developer - San Jose CA 95134 - ARM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42751&localeCode=en-us'>Full Stack Web Developer - San Jose CA 95134 - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 11, 2019 ... Full Stack Web Developer. Job ID #: 15683; Job Category: Applications 
 Engineering; Employment Type: Experienced Professionals; Division: Pelion 
@@ -173,7 +173,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://the-idea-people.workable.com/j/B71B2F46F9'>The Idea People - Jobs: Senior Full Stack PHP Web Developer - Apply online</a></h5> 
+<h5><a href='https://the-idea-people.workable.com/j/B71B2F46F9'>The Idea People - Jobs: Senior Full Stack PHP Web Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -193,7 +193,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -244,7 +244,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
+<h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -258,11 +258,11 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692279083-full-stack-developer'>spruceinfotech Full-Stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692279083-full-stack-developer'>spruceinfotech Full-Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999692277899-senior-javascript-full-stack-developer'>DevIQ Senior Javascript Full-Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999692277899-senior-javascript-full-stack-developer'>DevIQ Senior Javascript Full-Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -276,7 +276,7 @@ business?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://rochester-talent.freshteam.com/jobs/CS4Lv_PJjX-r/full-stack-developer'>full stack developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rochester-talent.freshteam.com/jobs/CS4Lv_PJjX-r/full-stack-developer'>full stack developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... FULL STACK DEVELOPER. Ch?a, Cundinamarca | Full time. Apply Now. 
 Rochester School is a private school focused on environmental sustainability and
@@ -369,7 +369,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -377,7 +377,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://smartin.join.com/jobs/248370-fullstack-web-developer-m-w'>Job @ smartin ADVERTISING (Cologne): Fullstack Web... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartin.join.com/jobs/248370-fullstack-web-developer-m-w'>Job @ smartin ADVERTISING (Cologne): Fullstack Web... | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -385,7 +385,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -393,7 +393,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://pickwings.join.com/jobs/251645-full-stack-engineer-w-m-oder-80-100'>Job @ Pickwings (Z?rich): Full-Stack-Engineer (w/m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickwings.join.com/jobs/251645-full-stack-engineer-w-m-oder-80-100'>Job @ Pickwings (Z?rich): Full-Stack-Engineer (w/m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -401,7 +401,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://dedge.recruiterbox.com/jobs/fk03fdf/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedge.recruiterbox.com/jobs/fk03fdf/'>
     D?veloppeur Fullstack .NET/Javascript (H/F) at D-EDGE
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -459,7 +459,7 @@ Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?.
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Senior Full Stack Engineer at Findmypast.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://telusinternational.avature.net/careers/PipelineDetail/Full-Stack-Developer-Net/6490'>Full Stack Developer</a></h5> 
+<h5><a href='https://telusinternational.avature.net/careers/PipelineDetail/Full-Stack-Developer-Net/6490'>Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... You will grow and maintain our suite of applications covering field technician 
 learning and sales. You will work with the .NET platform in a Windows 
