--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tanda/c2d0fdf8-c192-4d6b-8c57-ee8ba5be3689'>Tanda - Senior Site Reliability Engineer (copy)</a></h5> 
+<h5><a href='https://jobs.lever.co/tanda/c2d0fdf8-c192-4d6b-8c57-ee8ba5be3689'>Tanda - Senior Site Reliability Engineer (copy)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -92,7 +92,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skytap/46a11f76-e655-44d7-858f-9a638391b464'>Skytap - Site Reliability Engineer - Platform Compute</a></h5> 
+<h5><a href='https://jobs.lever.co/skytap/46a11f76-e655-44d7-858f-9a638391b464'>Skytap - Site Reliability Engineer - Platform Compute</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -108,7 +108,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4348113002'>Job Application for Site Reliability Engineer at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4348113002'>Job Application for Site Reliability Engineer at Punchh</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -150,7 +150,7 @@ NodeJS.</p>
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365099002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365099002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -191,7 +191,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rockall-technologies.workable.com/j/4F92E26A5E'>Rockall - Jobs: Graduate Site Reliability Engineer (SRE) - Apply online</a></h5> 
+<h5><a href='https://rockall-technologies.workable.com/j/4F92E26A5E'>Rockall - Jobs: Graduate Site Reliability Engineer (SRE) - Apply online</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -227,7 +227,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o82u9fwx&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=nJOePKwP'>Tenable Careers - Principal Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o82u9fwx&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=nJOePKwP'>Tenable Careers - Principal Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -235,7 +235,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/u7co9irou35u65uajif41t8n3y'>Site Reliability Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/u7co9irou35u65uajif41t8n3y'>Site Reliability Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -280,12 +280,12 @@ for this job. Quizlet's mission is to help students (and their teachers) practic
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/invitae/jobs/1771625?gh_jid=1771625'>Job Application for Senior Site Reliability Engineer at Invitae</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invitae/jobs/1771625?gh_jid=1771625'>Job Application for Senior Site Reliability Engineer at Invitae</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Invitae is looking for a Site Reliability Engineer whom will help operations scale 
 durably while increasing product velocity, and further deliver on our mission to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uipath/0c6108eb-4f32-4a3c-bbb5-f32b99486411'>UiPath - Principal Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/uipath/0c6108eb-4f32-4a3c-bbb5-f32b99486411'>UiPath - Principal Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -293,7 +293,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999691913366-site-reliability-engineer-architect'>Snow Software Site Reliability Engineer Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999691913366-site-reliability-engineer-architect'>Snow Software Site Reliability Engineer Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -321,7 +321,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/ozGX9fw5'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/griddynamics/job/ozGX9fw5'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -329,7 +329,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03hk1/'>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03hk1/'>
     Site Reliability Engineering at OYO
 </a></h5> 
 <p><span class="badge badge-light">Gurugram, Haryana Malaysia</span></p>
